backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: backend-deploy
  name: backend-deploy
  namespace: thevoid
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-deploy
  strategy: {}
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: backend-deploy
        tier: backend
    spec:
      containers:
      - image: carnsds/void-backend:1.0
        name: void-backend
        ports:
        - containerPort: 9080
status: {}
