redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: redis-deploy
  name: redis-deploy
  namespace: thevoid
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-deploy
  strategy: {}
  template:
    metadata:
      labels:
        app: redis-deploy
        tier: backend
    spec:
      containers:
      - image: redis:alpine
        name: redis
        ports:
        - containerPort: 6379
        resources: {}
status: {}
