destinationrules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: frontend-service
  namespace: thevoid
spec:
  host: frontend-service
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
    name: backend-service
    namespace: thevoid
spec:
    host: backend-service
    subsets:
    - name: v1
    labels:
        version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
    name: mongo-service
    namespace: thevoid
spec:
    host: mongo-service
    subsets:
    - name: v1
    labels:
        version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
    name: redis-service
    namespace: thevoid
spec:
    host: redis-service
    subsets:
    - name: v1
    labels:
        version: v1
